refactor(cmake): Update include directories and add CoreFalso source files

--- a/ui-qt/CMakeLists.txt
+++ b/ui-qt/CMakeLists.txt
@@ -12,14 +12,15 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
-# --- Definicion de includes ---
-include_directories(${CMAKE_SOURCE_DIR}/include)
+
 
 set(PROJECT_SOURCES
     src/main.cpp
     src/mainwindow.cpp
     src/mainwindow.h
     src/mainwindow.ui
+    src/CoreFalso.h
+    src/CoreFalso.cpp
 )
 
 add_executable(CafeteriaApp
@@ -28,4 +29,9 @@ add_executable(CafeteriaApp
 
 target_link_libraries(CafeteriaApp PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-target_include_directories(CafeteriaApp PRIVATE ${CMAKE_SOURCE_DIR}/src)
+# --- Definicion de includes ---
+# Añadir el include del proyecto padre
+target_include_directories(CafeteriaApp PRIVATE
+    ${CMAKE_SOURCE_DIR}/src
+    ${CMAKE_SOURCE_DIR}/include
+)
