refactor: Actualizar el registro del observador para utilizar shared_ptr y mejorar la inicialización del menú.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,5 +31,7 @@ add_executable(cafeteria.out ${SOURCES})
 
 message(STATUS "Configuración de CMake para CafeteriaManager completada.")
 
+add_subdirectory(ui-qt)
+
 # --- FASE 3: Tests
 add_subdirectory(tests)
