refactor: Actualizar imports en varios archivos para aceptar la nueva estructura

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,13 @@
 cmake_minimum_required(VERSION 3.10)
 
 # Nombre del proyecto.
-project(CafeteriaManager VERSION 1.0)
+project(CafeteriaSystem VERSION 4.0)
 
 # Establecer el estándar de C++ a C++17 (recomendado).
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Añadir la carpeta 'include' a la ruta de búsqueda de headers.
-include_directories(include)
-
-# --- FASE 2: GTest Integration ---
+# --- GTest Integration ---
 include(FetchContent)
 FetchContent_Declare(
   googletest
@@ -23,15 +20,12 @@ FetchContent_MakeAvailable(googletest)
 
 enable_testing()
 
-# Busca automáticamente TODOS los archivos .cpp en la carpeta src y sus subdirectorios.
-file(GLOB_RECURSE SOURCES "src/*.cpp")
+add_subdirectory(common)
+add_subdirectory(server)
+#add_subdirectory(client)
 
-# Definir el nombre del programa ejecutable y los archivos fuente que necesita para compilarse.
-add_executable(cafeteria.out ${SOURCES})
+#Tests
+add_subdirectory(tests)
 
 message(STATUS "Configuración de CMake para CafeteriaManager completada.")
 
-add_subdirectory(ui-qt)
-
-# --- FASE 3: Tests
-add_subdirectory(tests)
