--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,3 +1,5 @@
 project(CafeteriaCommon)
 add_library(CafeteriaCommon INTERFACE)
-target_include_directories(CafeteriaCommon INTERFACE include)
+target_include_directories(CafeteriaCommon INTERFACE 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
