--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,29 +1,31 @@
 cmake_minimum_required(VERSION 3.10)
 project(CafeteriaManagerTests)
 
-# Enable CTest
 include(GoogleTest)
 
-# Link to the main project libraries or sources
-# Since the main CMakeLists.txt globbed sources, we might need to expose them as a library
-# or re-glob them here. For a cleaner approach, we should probably refactor the main CMakeLists
-# to create a 'core' library, but to minimize impact, I will glob sources again excluding main.cpp.
-
-file(GLOB_RECURSE TEST_SOURCES "../src/*.cpp")
-list(FILTER TEST_SOURCES EXCLUDE REGEX ".*/main.cpp$")
-
-# Create test executable
-add_executable(unit_tests
-    ${TEST_SOURCES}
-    test_strategy.cpp
-    test_state.cpp
-    test_factory.cpp
-    test_integration_system.cpp
-    test_concurrency.cpp
+# Incluir solo los tests y los archivos necesarios (sin main.cpp)
+file(GLOB TEST_SOURCES
+    "test_*.cpp"
 )
 
-target_include_directories(unit_tests PRIVATE ../include)
+# Agregar fuente de DatabaseManager para TDD
+file(GLOB DBMANAGER_SRC "../server/src/db/DatabaseManager.cpp")
 
-target_link_libraries(unit_tests GTest::gtest_main GTest::gmock)
+add_executable(unit_tests
+    ${TEST_SOURCES}
+    ${DBMANAGER_SRC}
+)
+
+target_include_directories(unit_tests PRIVATE
+    ../server/include
+    ../common/include
+)
+
+find_package(Qt6 REQUIRED COMPONENTS Sql)
+target_link_libraries(unit_tests
+    GTest::gtest_main
+    GTest::gmock
+    Qt6::Sql
+)
 
 gtest_discover_tests(unit_tests)
