--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required(VERSION 3.5)
+
 project(CafeteriaServer)
 
 # Paquetes necesarios
@@ -9,7 +11,11 @@ file(GLOB_RECURSE SERVER_SOURCES "src/*.cpp")
 add_executable(CafeteriaServer ${SERVER_SOURCES})
 
 # Includes y Librerías
-target_include_directories(CafeteriaServer PRIVATE include)
+target_include_directories(CafeteriaServer
+    PRIVATE include
+    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../common/include
+)
 target_link_libraries(CafeteriaServer PRIVATE 
     Qt6::Core Qt6::Network Qt6::Sql 
     CafeteriaCommon # <--- Usa los DTOs
