--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,6 +30,7 @@ set(SERVER_SOURCES
     ../server/src/patterns/DescuentoFijo.cpp
     ../server/src/patterns/DescuentoNulo.cpp
     ../server/src/patterns/DescuentoPorcentaje.cpp 
+    ../server/src/repositories/ProductRepository.cpp
 )
 
 add_executable(unit_tests
