refactor: agregar PedidoRepository a las pruebas unitarias y ajustar la inicialización de SistemaPedidos

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,6 +31,7 @@ set(SERVER_SOURCES
     ../server/src/patterns/DescuentoNulo.cpp
     ../server/src/patterns/DescuentoPorcentaje.cpp 
     ../server/src/repositories/ProductRepository.cpp
+    ../server/src/repositories/PedidoRepository.cpp
 )
 
 add_executable(unit_tests
