feat: activar AUTOMOC y ajustar fuentes en CMake para el servidor

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -5,10 +5,19 @@ project(CafeteriaServer)
 # Paquetes necesarios
 find_package(Qt6 REQUIRED COMPONENTS Core Network Sql)
 
+# Activar AUTOMOC para procesar Q_OBJECT en headers
+set(CMAKE_AUTOMOC ON)
+
 # Buscar fuentes (ajustado a la nueva ruta)
 file(GLOB_RECURSE SERVER_SOURCES "src/*.cpp")
 
 add_executable(CafeteriaServer ${SERVER_SOURCES})
+
+# Algunos headers con Q_OBJECT deben ser procesados por AUTOMOC; asegurarse de
+# que estén registrados como fuentes para que CMake los tenga en cuenta.
+target_sources(CafeteriaServer PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/NetworkServer.h
+)
 
 # Includes y Librerías
 target_include_directories(CafeteriaServer
