feat: habilitar la subcarpeta del cliente en CMake y agregar dependencias de red

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ enable_testing()
 
 add_subdirectory(common)
 add_subdirectory(server)
-#add_subdirectory(client)
+add_subdirectory(client)
 
 #Tests
 add_subdirectory(tests)
